# mcp-agents

./: .gitignore  README_NEW.md  pyproject.toml
agents/: __init__.py  config.py
agents/agents_as_tools/: approach.py  example_agent_as_tool.py  example_agent_as_tool_advanced.py
agents/agents_as_tools/arbeitsstand/: approach_with_structuredtool.py  structured_tool.py
agents/api/: api.py  utils.py
agents/configured_agents/number_one/: config.py
agents/configured_agents/number_two/: config.py  prompts_productive.py
agents/containers/: agents_as_tools.py  mcp_tools.py  subagents.py
agents/factory/: factory.py  registry.py  utils.py
agents/llm/: client.py
agents/mcp_adaption/: container.py  schemas.py
agents/mcp_api/: api.py  langchain_stream.py  langchain_stream_temp.py  utils.py
agents/mcp_client/: abstract.py  api.py  client.py  dummy_server.py
agents/mcp_server/: dummy_server.py
agents/middleware/: middleware.py  prompts.py  utils.py  validation.py
agents/models/: agents.py  api.py  client.py  extended_state.py  stream.py  tools.py
tests/: call_tools.py  container_mcp_tools.py  manual_call.py  manual_call_agent_as_tool.py  manual_call_agent_run.py  schemas.py  test_client_integration.py  test_factory.py
tests/configured_agents/: config.py  prompts_productive.py
tests/configured_agents/number_one/: config.py
tests/configured_agents/number_two/: config.py
