[tool.poetry]
name = "agents"
version = "0.1.0"
description = ""
authors = ["patrick.priewe <ppriewe@gmx.net>"]
readme = "README.md"
packages = [
    { include = "agents" },
    { include = "tests" }]

[tool.poetry.dependencies]
python = "^3.10"
mcp = "1.13.1"
anyio = "==4.10.0"

[tool.poetry.group.api.dependencies]
fastapi = "^0.115.12"
uvicorn = "=0.31.1"
langchain = "^1.0.0"
langchain-classic = "^1.0.0"
langchain-core = "^1.0.0"
openai = "^1.16.2"
httpx = "^0.27.0"
langchain-openai = "^1.1.6"

[tool.poetry.group.test.dependencies]
pytest = ">=7.1.0"

# Linting Dependencies
[tool.poetry.group.lint.dependencies]
pre-commit = ">=2.18.0"
ruff = ">=0.1.8"
mypy = ">=0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
